# esp32-61850-socket

./: LICENSE  README.md  sdkconfig.old
main/: CMakeLists.txt
main/include/: if_dl.h
main/libiec61850/src/iec61850/server/mms_mapping/: logging.c  mms_goose.c
main/libiec61850/src/mms/iso_server/: iso_connection.c
main/libiec61850/src/mms/iso_session/: iso_session.c
main/src/: ethernet_esp32.c  file_provider_esp32.c  static_model.c
tcp_socket_61850_pub/: CMakeLists.txt  sdkconfig
tcp_socket_61850_pub/main/include/: platform_endian.h  stack_config.h
tcp_socket_61850_pub/main/libiec61850/hal/: CMakeLists.txt
tcp_socket_61850_pub/main/libiec61850/hal/filesystem/esp32/: file_provider_esp32.c
tcp_socket_61850_pub/main/libiec61850/hal/serial/esp32/: serial_port_esp32.c
tcp_socket_61850_pub/main/libiec61850/hal/socket/esp32/: socket_esp32.c
tcp_socket_61850_pub/main/libiec61850/hal/thread/esp32/: thread_esp32.c
tcp_socket_61850_pub/main/libiec61850/hal/time/esp32/: time.c
tcp_socket_61850_pub/main/libiec61850/src/common/: conversions.c
tcp_socket_61850_pub/main/libiec61850/src/goose/: goose_publisher.c
tcp_socket_61850_pub/main/libiec61850/src/iec61850/server/mms_mapping/: control.c  mms_mapping.c
tcp_socket_61850_pub/main/libiec61850/src/mms/iso_cotp/: cotp.c
tcp_socket_61850_pub/main/libiec61850/src/mms/iso_mms/common/: mms_value.c
tcp_socket_61850_pub/main/src/: lib_memory.c  non_blocking_socket_example.c  socket_esp32.c
tcp_socket_61850_sub/: sdkconfig.old
tcp_socket_61850_sub/main/: CMakeLists.txt
tcp_socket_61850_sub/main/include/: ifaddrs.h  stack_config.h  static_model.h
tcp_socket_61850_sub/main/include_private/: mms_common_internal.h
tcp_socket_61850_sub/main/libiec61850/: CMakeLists.txt
tcp_socket_61850_sub/main/libiec61850/src/iec61850/client/: ied_connection.c
tcp_socket_61850_sub/main/src/: ethernet_esp32.c  non_blocking_socket_example.c  static_model.c  time.c
